# chronos-ds-engine

./: CMakeLists.txt  README.md
algorithms/: distributed_algorithm.h
algorithms/raft/: raft.cpp  raft.h
clock/: logical_clock.h
configs/: example_experiment.json
core/: event.h  event_engine.cpp  event_engine.h
docs/: architecture.md
experiments/: config.cpp  config.h  output.csv  run_experiment.cpp  simulator.cpp  simulator.h
failures/: failure_injector.cpp  failure_injector.h
metrics/: metrics.cpp  metrics.h
network/: network.cpp  network.h
paper/: deterministic_simulation_of_distributed_systems.md
scripts/: compare_runs.sh  run_experiment.sh
tests/: test_clocks_and_network.cpp  test_event_engine.cpp  test_raft_and_snapshot.cpp
